--- a/src/Resources/views/Collector/performance.html.twig
+++ b/src/Resources/views/Collector/performance.html.twig
@@ -1,18 +1,23 @@
 {% extends '@WebProfiler/Profiler/layout.html.twig' %}
 
 {% block toolbar %}
-    {% if collector.enabled %}
-        {% set request_time = collector.requestTime ?? 0 %}
-        {% set query_count = collector.queryCount %}
-        {% set icon %}
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="10"/>
-                <polyline points="12 6 12 12 16 14"/>
-            </svg>
+    {# Always show collector, even when disabled, to provide status information #}
+    {% set request_time = collector.requestTime ?? 0 %}
+    {% set query_count = collector.queryCount ?? 0 %}
+    {% set icon %}
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"/>
+            <polyline points="12 6 12 12 16 14"/>
+        </svg>
+        {% if collector.enabled %}
             <span class="sf-toolbar-value">{{ collector.formattedRequestTime }}</span>
-        {% endset %}
+        {% else %}
+            <span class="sf-toolbar-value" style="color: #999;">Disabled</span>
+        {% endif %}
+    {% endset %}
 
-        {% set text %}
+    {% set text %}
+        {% if collector.enabled %}
             <div class="sf-toolbar-info-piece">
                 <b>Request Time</b>
                 <span>{{ collector.formattedRequestTime }}</span>
@@ -53,14 +58,47 @@
                     </span>
                 </div>
             {% endif %}
-        {% endset %}
+        {% else %}
+            <div class="sf-toolbar-info-piece">
+                <b>Status</b>
+                <span style="color: #999;">Tracking Disabled</span>
+            </div>
+            <div class="sf-toolbar-info-piece">
+                <b>Reason</b>
+                <span style="color: #999;">
+                    {% if not collector.enabled %}
+                        Bundle disabled or environment not tracked
+                    {% endif %}
+                </span>
+            </div>
+            {% if collector.tableName %}
+                <div class="sf-toolbar-info-piece">
+                    <b>Table</b>
+                    <span>
+                        {% if collector.tableExists %}
+                            {% if collector.tableIsComplete %}
+                                <span style="color: #4caf50;">✓ Complete</span>
+                            {% else %}
+                                <span style="color: #f57c00;">⚠ Incomplete</span>
+                            {% endif %}
+                        {% else %}
+                            <span style="color: #d32f2f;">✗ Missing</span>
+                        {% endif %}
+                    </span>
+                </div>
+            {% endif %}
+        {% endif %}
+    {% endset %}
 
+    {% if collector.enabled %}
         {% set status = request_time < 200 ? 'status-success' : (request_time < 500 ? 'status-warning' : 'status-error') %}
         {% if collector.tableName and collector.tableExists and not collector.tableIsComplete %}
             {% set status = 'status-error' %}
         {% endif %}
-        {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: profiler_url, status: status }) }}
+    {% else %}
+        {% set status = 'status-disabled' %}
     {% endif %}
+    {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: profiler_url, status: status }) }}
 {% endblock %}
 
 {% block menu %}
